--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="card-face card-front">
 
       <div class="top">
-        <span class="bank">INDIAN BANK</span>
+        <span class="bank">State Bank of India</span>
         <span class="visa">VISA</span>
       </div>
 
@@ -42,7 +42,7 @@
       <div class="signature">
         <span class="sign-label">AUTHORIZED SIGNATURE</span>
         <div class="sign-box">
-          <span class="sign-text">Manjar Alam</span>
+          <span class="sign-text">Manjar alam</span>
         </div>
       </div>
 
