--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="card-face card-front">
 
       <div class="top">
-        <span class="bank">State Bank of India</span>
+        <span class="bank">Indian Bank</span>
         <span class="visa">VISA</span>
       </div>
 
@@ -30,7 +30,7 @@
       <div class="info">
         <div>
           <span>CARD HOLDER</span>
-          <p id="cardName">MANJAR ALAM</p>
+          <p id="cardName">MD SAHIL</p>
         </div>
         <div>
           <span>VALID THRU</span>
@@ -42,7 +42,7 @@
       <div class="signature">
         <span class="sign-label">AUTHORIZED SIGNATURE</span>
         <div class="sign-box">
-          <span class="sign-text">Manjar alam</span>
+          <span class="sign-text">Md Sahil</span>
         </div>
       </div>
 
